# rs_test

./: CMakeLists.txt  README.md  package.xml  setup.py
cmake/: rs_test_config.cmake
descriptors/analysis_engines/: faster_rcnn_test.xml  faster_test.xml  fcis_test.xml  mask_rcnn_test.xml  my_demo.xml  python_test.xml  ssd_test.xml
descriptors/annotators/: ExampleGSOCAnnotator.xml  FCISAnnotator.xml  FasterRCNNAnnotator.xml  MaskRCNNAnnotator.xml  PythonTestAnnotator.xml  SSDAnnotator.xml
descriptors/typesystem/: all_types.xml  test_types.xml
include/rs_test/types/: all_types.h  test_types.h  type_definitions.h
python/rs_test/: __init__.py  coco_utils.py  faster_rcnn.py  fcis.py  mask_rcnn.py  ssd.py  test.py
scripts/: install_trained_data.py
src/: ExampleGSOCAnnotator.cpp  FCISAnnotator.cpp  FasterRCNNAnnotator.cpp  MaskRCNNAnnotator.cpp  MyFirstAnnotator.cpp  PythonTestAnnotator.cpp  SSDAnnotator.cpp
trained_data/: mask_rcnn_resnet50_coco_trained.npz
